# fake-news-detection

./: .env.example  .gitignore  README.md  app.py  detector.py  project.md  pyproject.toml
