[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.14",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
